--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project was made during study sessions of Typescript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
