--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "typescript": "^5.5.4"
   }
 }
